# design_patterns_java

Facade/src/designPattern/: CustomPackaging.java  PackageInfo.java
Facade/src/designPattern/deliveryMethods/: DeliveryByBicycle.java  DeliveryByCar.java  PackageDelivery.java
Facade/src/designPattern/proxy/: DeliveryProxyForBicycle.java  DeliveryProxyForCar.java
command-pattern-master/command-pattern-master/: .gitignore  README.md
command-pattern-master/command-pattern-master/c++/: .cproject  CMakeLists.txt  build.sh  clean.sh  run.sh
command-pattern-master/command-pattern-master/c++/remotecontroller/: button.cpp  button.h  ibutton.h  remote_controller.cpp  remote_controller.h
command-pattern-master/command-pattern-master/c++/remotecontroller/commands/: beep_robot_command.cpp  beep_robot_command.h  icommand.h  move_robot_command.cpp  move_robot_command.h  turn_robot_command.cpp  turn_robot_command.h
command-pattern-master/command-pattern-master/c++/sdk/: irobot.h  robot.cpp  robot.h
command-pattern-master/command-pattern-master/c++/src/: main.cpp
command-pattern-master/command-pattern-master/c++/tests/: sample_tests.cpp
command-pattern-master/command-pattern-master/java/src/: Main.java
command-pattern-master/command-pattern-master/java/src/robotcontroller/: RobotControllerRemote.java
singleton/src/designPattern/: DeliveryManager.java  DesignPattern.java
singleton/src/designPattern/deliveryMethods/: DeliveryByTruck.java
singleton/src/designPattern/proxy/: DeliveryProxyForTruck.java
(+8 files in other folders)
